--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubActivity">
+    tools:context=".SubActivity"
+    android:id="@+id/edit">
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,6 +28,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:id="@+id/editText" />
 
     <TextView
@@ -42,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
+        android:inputType="text"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp" />
 <LinearLayout
