--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SubActivity"
-    android:id="@+id/edit">
+    android:id="@+id/edit"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,11 +44,12 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
         android:id="@+id/editText2"
-        android:inputType="text"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp" />
-<LinearLayout
+        android:layout_gravity="center_horizontal" />
+
+    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_height="61dp"
