--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -30,7 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:id="@+id/editText" />
+        android:id="@+id/editText"
+        android:background="@drawable/border"
+        />
 
     <TextView
         android:layout_width="77dp"
@@ -47,7 +49,9 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/editText2"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/border"
+        />
 
     <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
