--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -37,7 +37,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/password"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        android:background="@drawable/border"
+        />
 
     <Button
         android:layout_width="wrap_content"
