--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,26 @@
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
+    <ListView
+        android:id="@+id/lvChat"
+        android:transcriptMode="alwaysScroll"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/llSend"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
+<RelativeLayout
+    android:id="@+id/llSend"
+    android:layout_alignParentBottom="true"
+    android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:paddingTop="5dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:layout_height="wrap_content"
+>
     <EditText
         android:id="@+id/etMessage"
         android:layout_toLeftOf="@+id/btSend"
@@ -23,5 +43,6 @@
         android:textSize="18sp"
         android:text="@string/send">
     </Button>
+    </RelativeLayout>
 
 </RelativeLayout>
