--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="追加"
-        android:id="@+id/addBtn"
-        android:layout_gravity="center_horizontal" />
+    android:background="@drawable/gplaypattern"
+    tools:context=".MainActivity"
+    android:weightSum="1">
+
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="490dp"
         android:id="@+id/listView"
         android:layout_gravity="center_horizontal" />
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <Button
+        android:layout_weight="0.7"
+        android:layout_width="70dp"
+        android:layout_height="match_parent"
+        android:text="予定を書く"
+        android:id="@+id/addBtn"
+        android:layout_gravity="bottom|left"
+        android:background="@drawable/blue"
+        />
+    <Button
+        android:layout_weight="0.3"
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:text="設定"
+        android:id="@+id/btnsettei"
+        android:layout_gravity="bottom|right"
+        android:background="@drawable/blue"
+        />
+</LinearLayout>
+
 </LinearLayout>
