--- a/app/src/main/res/layout/sub.xml
+++ b/app/src/main/res/layout/sub.xml
@@ -1,79 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SubActivity"
-    android:id="@+id/edit"
-    android:weightSum="1">
+    android:id="@+id/mainLayout"
+    android:weightSum="1"
+
+    android:background="@drawable/nekotyan"
+    >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="スケジュールを入れよう！"
+        android:text="スケジュールを入れて！！"
         android:id="@+id/title"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp" />
+        android:layout_above="@+id/editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="69dp"
+        android:layout_marginRight="-60dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="予定"
-        android:id="@+id/yotei"
-        android:textSize="30dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="30dp" />
+
+
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
         android:inputType="text"
         android:id="@+id/editText"
-        android:background="@drawable/border"
-        />
-
-    <TextView
-        android:layout_width="77dp"
-        android:layout_height="wrap_content"
-        android:text="内容"
-        android:id="@+id/contents"
+        android:background="#bbffffff"
         android:textSize="30dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="30dp" />
+        android:layout_above="@+id/editText2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="86dp" />
+
+
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="170dp"
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/editText2"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/border"
-        />
+        android:background="#bbffffff"
+        android:gravity="left|top"
+        android:layout_above="@+id/cancelBtn"
+        android:layout_alignRight="@+id/cancelBtn"
+        android:layout_alignEnd="@+id/cancelBtn"
+        android:layout_marginBottom="43dp" />
 
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_height="61dp"
-    android:layout_width="match_parent"
-    >
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:text="付箋を追加"
-        android:id="@+id/addHusen"
-        />
+
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_height="75dp"
         android:text="キャンセル"
         android:id="@+id/cancelBtn"
-        android:layout_gravity="right" />
-    </LinearLayout>
+        android:background="@drawable/blue"
+        android:layout_alignBottom="@+id/back"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/title"
+        android:layout_toRightOf="@+id/title" />
 
-</LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:text="予定を追加"
+        android:id="@+id/addHusen"
+        android:layout_gravity="bottom|left"
+        android:background="@drawable/blue"
+        android:layout_alignTop="@+id/cancelBtn"
+        android:layout_alignLeft="@+id/back"
+        android:layout_alignStart="@+id/back"
+        android:layout_toLeftOf="@+id/cancelBtn"
+        android:layout_toStartOf="@+id/cancelBtn" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="予定"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/editText"
+        android:layout_toLeftOf="@+id/title"
+        android:layout_toStartOf="@+id/title" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="内容"
+        android:id="@+id/textView3"
+        android:layout_toLeftOf="@+id/title"
+        android:layout_toStartOf="@+id/title"
+        android:layout_above="@+id/editText2" />
+
+</RelativeLayout>
